Fixed vertical alignment issue with small icons next to repeated lists.

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -153,3 +153,15 @@ body {
   background-color: #ccc !important;
   border-color: #ccc !important;
 }
+
+.vam {
+    vertical-align: middle;
+}
+
+span.vam {
+    display: inline-block;
+}
+
+.vam img {
+    vertical-align: top; /* removes a white gap below image */
+}
